jobs/slurm-262.out
gpu02
no change     /pchem-data/meuwly/boittier/home/miniforge3/condabin/conda
no change     /pchem-data/meuwly/boittier/home/miniforge3/bin/conda
no change     /pchem-data/meuwly/boittier/home/miniforge3/bin/conda-env
no change     /pchem-data/meuwly/boittier/home/miniforge3/bin/activate
no change     /pchem-data/meuwly/boittier/home/miniforge3/bin/deactivate
no change     /pchem-data/meuwly/boittier/home/miniforge3/etc/profile.d/conda.sh
no change     /pchem-data/meuwly/boittier/home/miniforge3/etc/fish/conf.d/conda.fish
no change     /pchem-data/meuwly/boittier/home/miniforge3/shell/condabin/Conda.psm1
no change     /pchem-data/meuwly/boittier/home/miniforge3/shell/condabin/conda-hook.ps1
no change     /pchem-data/meuwly/boittier/home/miniforge3/lib/python3.12/site-packages/xontrib/conda.xsh
no change     /pchem-data/meuwly/boittier/home/miniforge3/etc/profile.d/conda.csh
no change     /pchem-data/meuwly/boittier/home/.bashrc
No action taken.
/pchem-data/meuwly/boittier/home/miniforge3/envs/jaxe3xcuda11p39/bin/python
GPU ID: 0
restart /pchem-data/meuwly/boittier/home/jaxeq/all_runs/runs11/20240924-141337dcm-2-espw-1000.0-restart-False/best_1000.0_params.pkl
args:
data_dir = /pchem-data/meuwly/boittier/home/jaxeq/
model_dir = model
num_epochs = 5000
learning_rate = 0.0001
batch_size = 1
esp_w = 1000.0
num_epics = 1
n_feat = 16
n_basis = 16
max_degree = 2
n_mp = 2
restart = /pchem-data/meuwly/boittier/home/jaxeq/all_runs/runs11/20240924-141337dcm-2-espw-1000.0-restart-False/best_1000.0_params.pkl
random_seed = 10983
n_dcm = 1
n_gpu = 0
data = qm9-esp40000-0.npz
n_train = 64000
n_valid = 2000
type = dipole
include_pseudotensors = False
[cuda(id=0)]
gpu
[cuda(id=0)]
['/pchem-data/meuwly/boittier/home/jaxeq/dcmnet', '/pchem-data/meuwly/boittier/home/miniforge3/envs/jaxe3xcuda11p39/lib/python39.zip', '/pchem-data/meuwly/boittier/home/miniforge3/envs/jaxe3xcuda11p39/lib/python3.9', '/pchem-data/meuwly/boittier/home/miniforge3/envs/jaxe3xcuda11p39/lib/python3.9/lib-dynload', '/pchem-data/meuwly/boittier/home/miniforge3/envs/jaxe3xcuda11p39/lib/python3.9/site-packages', '/pchem-data/meuwly/boittier/home/jaxeq']
Traceback (most recent call last):
  File "/pchem-data/meuwly/boittier/home/jaxeq/dcmnet/main.py", line 51, in <module>
    from dcmnet.training_dipole import train_model_dipo
  File "/pchem-data/meuwly/boittier/home/jaxeq/dcmnet/training_dipole.py", line 216
    )
    ^
SyntaxError: positional argument follows keyword argument
